# jobBoard

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  applications.py  auth.py  jobs.py  notifications.py  profiles.py  uploads.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  application.py  job.py  notification.py  profile.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  application.py  job.py  notification.py  profile.py  user.py
backend/app/schemas/: __init__.py  admin.py  application.py  job.py  notification.py  profile.py  upload.py  user.py
backend/app/services/: email.py  notifications.py
backend/jobboard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: README  env.py
backend/migrations/versions/: 0001_create_users_table.py  0002_create_profile_tables.py  0003_create_jobs_table.py  0004_create_applications_table.py  0005_create_notifications_table.py
backend/tests/: test_admin.py  test_applications.py  test_auth.py  test_email.py  test_jobs.py  test_profiles.py  test_uploads.py  test_user_schema.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: nav-auth-button.tsx
frontend/src/lib/: admin-api.ts  api.ts  auth-api.ts  auth-token.ts  candidate-api.ts  config.ts  employer-api.ts  job-api.ts  job-format.ts  notification-api.ts  (+1 more)
(+40 files in other folders)
